Cleaned up README and removed unused typescript configs

--- a/src/IframeGenerator.module.scss
+++ b/src/IframeGenerator.module.scss
@@ -14,7 +14,23 @@
   }
 }
 
+.generatedContent {
+  margin: 40px auto;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.buttonLabel {
+  margin: 0 auto;
+  font-size: 10px;
+}
+
+.copyButton {
+  border: none;
+  background-color: white;
+}
+
 .iframe {
-  margin-top: 40px;
   text-align: center;
 }
